--- a/src/public/css/user/fixedComponents.css
+++ b/src/public/css/user/fixedComponents.css
@@ -1,4 +1,4 @@
-.scroll-to-top-icon, .contact-icon, .chat-icon {
+.scroll-to-top-icon, .contact-icon, .chat-icon, .chatbot-icon {
   display: inline-block;
   margin-left: auto;
   margin-right: 0;
@@ -13,7 +13,8 @@
   animation: ring 1.5s infinite;
   i { font-size: 50px; color: #e17640 };
 }
-.scroll-to-top-icon {bottom: 130px}
+.scroll-to-top-icon {bottom: 190px}
+.chatbot-icon {bottom: 130px}
 .contact-icon {bottom: 70px}
 .chat-icon {bottom: 10px}
 .dropup {
