--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -42,7 +42,7 @@
         <p>Thêm Khách Hàng</p>
       </a>
     </div>
-    <input type="text" id="search-input" placeholder="Tìm kiếm khách hàng">
+    <input type="text" id="search-input" name="name" placeholder="Tìm kiếm khách hàng">
   </div> 
 
   <div class="table">
