--- a/src/resource/views/admin/all/employee.hbs
+++ b/src/resource/views/admin/all/employee.hbs
@@ -43,7 +43,7 @@
         <p>Thêm Nhân Sự</p>
       </a>
     </div>
-    <input type="text" id="search-input" placeholder="Tìm kiếm nhân sự">
+    <input type="text" id="search-input" name="name" placeholder="Tìm kiếm nhân sự">
   </div>
 
   <div class="table">
