--- a/src/resource/views/admin/all/product.hbs
+++ b/src/resource/views/admin/all/product.hbs
@@ -47,7 +47,7 @@
         <p>Thêm Sản Phẩm</p>
       </a>
     </div>
-    <input type="text" id="search-input" placeholder="Tìm kiếm sản phẩm">
+    <input type="text" id="search-input" name="name" placeholder="Tìm kiếm sản phẩm">
   </div>
 
   <div class="table">
