--- a/src/resource/views/admin/all/supplier.hbs
+++ b/src/resource/views/admin/all/supplier.hbs
@@ -27,7 +27,7 @@
         <p>Thêm Nhà Cung Cấp</p>
       </a>
     </div>
-    <input type="text" id="search-input" placeholder="Tìm kiếm nhà cung cấp">
+    <input type="text" id="search-input" name="name" placeholder="Tìm kiếm nhà cung cấp">
   </div>
 
   <div class="table">
