--- a/src/resource/views/partials/fixedComponents.hbs
+++ b/src/resource/views/partials/fixedComponents.hbs
@@ -1,6 +1,7 @@
 <div class="scroll-to-top-icon" style="display: none;"><i class="fi fi-sr-angle-circle-up"></i></div>
-<div class="contact-icon"><i class="fi fi-sr-circle-phone-flip"></i></div>
-<div class="chat-icon"><i class="fi fi-sr-comment-quote"></i></div>
+<div class="chatbot-icon" data-tippy-content="Chat với AI của cửa hàng"><i class="fi fi-rr-chatbot-speech-bubble"></i></div>
+<div class="contact-icon" data-tippy-content="Thông tin liên hệ"><i class="fi fi-sr-circle-phone-flip"></i></div>
+<div class="chat-icon" data-tippy-content="Chat trực tiếp với admin"><i class="fi fi-sr-comment-quote"></i></div>
 
 <div class="dropup" style="display: none">
   <a target="_blank" href="https://www.facebook.com/bunnylylyyy"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="loading" loading="lazy"/></a>               
@@ -30,8 +31,3 @@
   </div>
   <div class="not-logged-in"><p>Please <a href="/authentication/sign-in">Log in</a> to chat</p></div>
 </div>
-
-<script>
-  var userId = `{{userId}}`
-  var syncData = `{{sync_chat}}`
-</script>
