--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -4,6 +4,7 @@
 @import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-bold-rounded/css/uicons-bold-rounded.css');
 @import url('https://cdn-uicons.flaticon.com/2.1.0/uicons-solid-rounded/css/uicons-solid-rounded.css');
 @import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-solid-straight/css/uicons-solid-straight.css');
+@import url('https://cdn-uicons.flaticon.com/2.6.0/uicons-regular-rounded/css/uicons-regular-rounded.css');
 
 body {
   background-color: #FFDFDF;
@@ -92,7 +93,7 @@ div.title {
   justify-content: center;
   gap: 5px; 
   margin-top: 10px;
-  i { color: red;}
+  i { color: red; font-size: 25px;}
   .main-title {
     display: inline-block;
     position: relative;
