--- a/src/resource/views/admin/all/purchase.hbs
+++ b/src/resource/views/admin/all/purchase.hbs
@@ -20,6 +20,15 @@
         </select>
       </div>
 
+      <div class="filter">
+        <label>Lọc theo:</label>
+        <select id="purchaseDate" class="filter-btn">
+          <option value="">Ngày đặt hàng</option>
+          <option value="1">Ngày tăng dần</option>
+          <option value="-1">Ngày giảm dần</option>
+        </select>
+      </div>
+
       <button id="clear-filter" style="display: none">Xoá bộ lọc</button>
 
       <a href="/admin/all-purchases/purchase/create" class="create-btn" id="create-btn">
