--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -34,3 +34,7 @@
 <script src="https://unpkg.com/popper.js@1"></script>
 <script src="https://unpkg.com/tippy.js@5"></script>
 <script src="/js/tippy.js"></script>
+<script>
+  var uid = `{{userId}}`
+</script>
+<script src="/js/partials/fixedComponents.js"></script>
