--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -27,19 +27,19 @@
       <div class="info">
         <div class="form-group">
           <label for="name">Tên Khách Hàng *</label>
-          <input type="text" id="name" name="name" value="{{userInfo.userInfo.name}}">
+          <input type="text" id="name" name="name" value="{{userInfo.name}}">
           <span class="form-message"></span>
         </div>
 
         <div class="form-group">
           <label for="phone">Số Điện Thoại *</label>
-          <input type="text" id="phone" name="phone" value="{{userInfo.userInfo.phone}}">
+          <input type="text" id="phone" name="phone" value="{{userInfo.phone}}">
           <span class="form-message"></span>
         </div>
 
         <div class="form-group">
           <label for="address">Địa Chỉ Nhận Hàng *</label>
-          <input type="text" id="address" name="address" value="{{userInfo.userInfo.address}}">
+          <input type="text" id="address" name="address" value="{{userInfo.address}}">
           <span class="form-message"></span>
         </div>
 
