--- a/src/resource/views/users/detailProduct.hbs
+++ b/src/resource/views/users/detailProduct.hbs
@@ -103,4 +103,4 @@
   var productImage   = `{{productInfo.img.path}}`
   loadFile('/js/user/detailProduct.js')
 </script>
-<script src="/js/user/product.js" defer></script>
+<script src="/js/user/product.js"></script>
