--- a/src/public/css/admin/allChats.css
+++ b/src/public/css/admin/allChats.css
@@ -69,67 +69,87 @@
     background-color: white;
     border-radius: 10px;
     padding: 10px;
-  }
-  .table {
-    overflow-x: auto;
-    padding: 10px 0;
-    height: 100vh;
-  }
-  table, td {
-    text-align: center;
-  }
-  table {
-    table-layout: fixed;
-    width: 20%;
-    /* height: 100%; */
-    border-spacing: 0px 10px;
-    padding: 0px 5px;
-    background-color: #F0F0F0;
-    border-radius: 10px;
-  }
-  thead {
-    background-color:#D1A6A6;
-    height: 50px;
-    a { text-decoration: none }
-    i { color: black }
-    td {
-      border-top-left-radius: 10px;
-      border-bottom-left-radius: 10px;
-      border-top-right-radius: 10px;
-      border-bottom-right-radius: 10px;
-    }
-  }
-  tbody {
-    tr {
-      background-color: white;
-      height: 50px !important;
-      td:first-child {
-        border-top-left-radius: 10px;
-        border-bottom-left-radius: 10px;
-        border-top-right-radius: 10px;
-        border-bottom-right-radius: 10px;
-        height: 50px !important
+    .chat-content {
+      height: 90%;
+      overflow-y: scroll;
+      box-sizing: border-box;
+      width: 100%;
+      margin-block-start: 0px;
+      margin-block-end: 0px;
+      padding-inline-start: 0px;
+      padding: 10px;
+      li {
+        background-color: #FFDFDF;
+        border-radius: 10px;
+        padding: 10px;
+        list-style: none;
+        margin-top: 5px;
+        max-width: 500px;
+        width: fit-content;
+        word-wrap: break-word;
+        display: block;
+        clear: both;
       }
-      a { 
+      .right-content {
+        float: right;
+      }
+      .left-content {
+        display: flex;
+        align-items: start;
+        justify-content: start;
+        gap: 5px;
+        img {
+          margin-top: 5px;
+          border-radius: 50%;
+          width: 30px;
+          aspect-ratio: 1/1;
+        }
+        li {
+          background-color: #f0f0f0;
+        }
+      }
+    }
+    .chat-content::-webkit-scrollbar-track {
+      background: white;
+    }
+    .input-form {
+      height: 10%;
+      display: flex;
+      align-items: center;
+      padding: 0 5px;
+      gap: 5px;
+      textarea {
+        width: 90%;
+        height: 40px;
+        padding: 0 5px;
+        border-radius: 10px;
+        border: 1px solid #D1A6A6;
+        word-wrap: break-word;
+        resize: none;
+        box-sizing: border-box;
+        padding: 10px 5px 0 5px;
+        font-family: 'Roboto', sans-serif;
+      }
+      textarea:focus {
+        outline: 1px solid #D1A6A6;
+      }
+      .send-btn {
+        width: 10%;
+        height: 40px;
         display: flex;
         align-items: center;
-        justify-content: center; 
-        color: black; 
-        font-weight: bold; 
-        width: 100%; 
-        height: 50px;
-        text-decoration: none;
+        justify-content: center;
+        background-color: #D1A6A6;
+        border-radius: 10px;
+        color: white;
+        cursor: pointer;
+      }
+      .send-btn.not-allowed {
+        cursor: not-allowed;
+        opacity: 0.5;
       }
     }
-    tr:hover {
-      filter: brightness(80%);
-    }
-    img {
-      border-radius: 10px;
-      width: 40px;
-      aspect-ratio: 1/1;
-    }
-  }  
+  }
 }
 @media screen and (max-width: 700px) {
 
