--- a/src/public/css/user/body.css
+++ b/src/public/css/user/body.css
@@ -124,6 +124,7 @@ div.products {
   align-items: center;
   gap: 10px;
   height: auto;
+  margin-top: 10px;
   padding: 15px;
   box-sizing: border-box;
   display: grid;
@@ -131,6 +132,7 @@ div.products {
   scroll-snap-type: x mandatory;
   overflow-x: scroll;
   max-width: 1300px;
+  border-radius: 20px;
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
   img { max-width: 100%; aspect-ratio: 1 / 1; transition: 0.5s; border-radius: 5px};
@@ -159,7 +161,7 @@ div.products {
     }
     #product-details {
       display: flex; 
-      height: 50px; 
+      height: 35px;
       text-overflow: ellipsis; 
       overflow: hidden;
       word-wrap: break-word;
