--- a/src/public/css/user/home.css
+++ b/src/public/css/user/home.css
@@ -4,14 +4,19 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: 10px;
+  margin-top: 20px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .flash-deal-board {
-  background: linear-gradient(168.12deg, #ffb0a4 0%, #ff6b7f 100%);;
-  border-radius: 10px;
+  background: linear-gradient(168.12deg, #ffb0a4 0%, #ff6b7f 100%);
+  border-radius: 20px;
   i.fi-sr-bolt, a {
     animation: bling 1s infinite
   }
+}
+.products-board {
+  background-color: white;
+  border-radius: 20px;
 }
 .famous-brand-board {
   overflow: hidden;
