--- a/src/public/css/admin/allChats.css
+++ b/src/public/css/admin/allChats.css
@@ -42,23 +42,28 @@
       .item {
         width: 100%;
         height: 80px;
-        background-color: #FFDFDF;
         border-radius: 10px;
-        padding: 10px;
+        padding: 5px;
         box-sizing: border-box;
         cursor: pointer;
-        .name, .last-message {
-          width: 100%;
-          height: 50%;
-          display: flex;
-          align-items: center;
-          justify-content: start;
+        display: flex;
+        align-items: center;
+        justify-content: start;
+        gap: 5px;
+        background-color: white;
+        img { 
+          border-radius: 50%;
+          width: 40px;
+          aspect-ratio: 1/1;
         }
-        .name { font-size: larger; font-weight: bolder; }
-        .last-message { font-size: smaller; }
+        .name { font-size: large; font-weight: bolder }
+        .last-message { font-size: smaller }
+      }
+      .item.active {
+        background-color: #FFDFDF;
       }
       .item:hover {
-        background-color: #D1A6A6;
+        filter: brightness(80%)
       }
     }
   }
@@ -69,8 +74,22 @@
     background-color: white;
     border-radius: 10px;
     padding: 10px;
+    .chat-header {
+      height: 10%;
+      display: flex;
+      align-items: center;
+      justify-content: start;
+      gap: 5px;
+      img { 
+        border-radius: 50%;
+        width: 40px;
+        aspect-ratio: 1/1;
+      }
+      .name { font-size: large; font-weight: bolder }
+      .last-active { font-size: smaller }
+    }
     .chat-content {
-      height: 90%;
+      height: 80%;
       overflow-y: scroll;
       box-sizing: border-box;
       width: 100%;
