--- a/src/resource/views/admin/all/customer.hbs
+++ b/src/resource/views/admin/all/customer.hbs
@@ -46,6 +46,7 @@
   </div> 
 
   <div class="table">
+    {{> exportFileButton}}
     <table class="all-items">
       <thead>
         <tr>
@@ -53,7 +54,7 @@
           <td style="width: 15%">Mã Khách hàng </td>
           <td style="width: 15%">Tên Khách Hàng</td>
           <td style="width: 25%">Địa chỉ       </td>
-          <td style="width: 10%">Tổng Đơn hàng </td>
+          <td style="width: 10%">S/L Đơn hàng  </td>
           <td style="width: 20%">Tổng doanh thu</td>
           <td style="width: 10%">Chi tiết      </td>
         </tr>
