--- a/src/resource/views/partials/fixedComponents.hbs
+++ b/src/resource/views/partials/fixedComponents.hbs
@@ -9,10 +9,10 @@
 </div>
 
 <div class="chat-box" style="display: none">
-  <div class="chat-header">
+  <div class="chat-header" style="opacity: 0;">
     <div class="icon">
       <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" alt="loading">
-      <div>Đặng Quỳnh Ly</div>
+      <div>Hỗ trợ trực tuyến</div>
     </div>
     <div class="minimize" style="cursor: pointer;"><i class="fi fi-br-window-minimize"></i></div>
   </div>
