--- a/src/resource/views/users/home.hbs
+++ b/src/resource/views/users/home.hbs
@@ -98,7 +98,7 @@
   </div>
 </div>
 
-<script defer>
+<script>
   loadFile('/js/user/home.js')
 </script>
 <script src="/js/user/product.js"></script>
