--- a/src/resource/views/admin/all/chat.hbs
+++ b/src/resource/views/admin/all/chat.hbs
@@ -8,7 +8,7 @@
           <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" alt="loading">
           <div>
             <div class="name">{{this.userInfo.name}}</div>
-            <div class="last-message">abcd</div>
+            <div class="last-message">{{this.lastMessage}}</div>
           </div>
         </div>
       {{/each}}
