--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -16,6 +16,7 @@
   <link rel="canonical" href="https://bunny-store.vercel.app/home">
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   <script src="/js/layouts/users.js"></script>
+  <script src="/js/importLinkCss.js"></script>
   <script src="/js/loadFile.js"></script>
   <title>{{title}}</title>
 </head>
@@ -34,8 +35,3 @@
 <script src="https://unpkg.com/popper.js@1"></script>
 <script src="https://unpkg.com/tippy.js@5"></script>
 <script src="/js/tippy.js"></script>
-<script>
-  var uid = `{{userId}}`
-  if (uid) socket.emit('joinRoom', {id: uid, room: uid})
-</script>
-<script src="/js/partials/fixedComponents.js"></script>
