--- a/src/resource/views/partials/fixedComponents.hbs
+++ b/src/resource/views/partials/fixedComponents.hbs
@@ -31,3 +31,33 @@
   </div>
   <div class="not-logged-in"><p>Please <a href="/authentication/sign-in">Log in</a> to chat</p></div>
 </div>
+
+<div class="ai-chat-box" style="display: none">
+  <div class="chat-header" style="opacity: 0;">
+    <div class="icon">
+      <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" alt="loading">
+      <div>Chatbot</div>
+    </div>
+    <div class="minimize" style="cursor: pointer;"><i class="fi fi-br-window-minimize"></i></div>
+  </div>
+  <div class="chat-body" style="display: none">
+    <ul class="chat-content">
+      <div class="left-content">
+        <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" alt="loading">
+        <li>Xin chào, tôi là Gemini. Nếu bạn đang đợi phản hồi từ admin, bạn có thể hỏi tôi để tham khảo thêm về các sản phẩm của shop nha !</li>
+      </div>
+    </ul>
+    
+    <form class="input-form">
+      <textarea name="input" id="input" class="input" placeholder="Aa"></textarea>
+      <div class="send-btn not-allowed">Gửi</div>
+    </form>
+  </div>
+  <div class="not-logged-in"><p>Please <a href="/authentication/sign-in">Log in</a> to chat</p></div>
+</div>
+
+<script>
+  var uid = `{{userId}}`
+  if (uid) socket.emit('joinRoom', {id: uid, room: uid})
+</script>
+<script src="/js/partials/fixedComponents.js"></script>
