--- a/src/resource/views/partials/fixedComponents.hbs
+++ b/src/resource/views/partials/fixedComponents.hbs
@@ -18,10 +18,7 @@
   </div>
   <div class="chat-body" style="display: none">
     <ul class="chat-content">
-      <div class="left-content">
-        <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" alt="loading">
-        <li>Hi, em có thể hỗ trợ gì cho anh/chị không ạ</li>
-      </div>
+      <li class="left-content">Hi, em có thể hỗ trợ gì cho anh/chị không ạ</li>
     </ul>
     
     <form class="input-form">
@@ -42,10 +39,7 @@
   </div>
   <div class="chat-body" style="display: none">
     <ul class="chat-content">
-      <div class="left-content">
-        <img src="https://res.cloudinary.com/bunny-store/image/upload/v1730102111/web-img/4_lnwzuk_jkpls2.webp" alt="loading">
-        <li>Xin chào, tôi là Gemini. Nếu bạn đang đợi phản hồi từ admin, bạn có thể hỏi tôi để tham khảo thêm về các sản phẩm của shop nha !</li>
-      </div>
+      <li class="left-content">Xin chào, tôi là Gemini. Nếu bạn đang đợi phản hồi từ admin, bạn có thể hỏi tôi để tham khảo thêm về các sản phẩm của shop nha !</li>
     </ul>
     
     <form class="input-form">
