--- a/src/resource/views/users/detailBrand.hbs
+++ b/src/resource/views/users/detailBrand.hbs
@@ -19,7 +19,7 @@
 
   <div class="related-products">
     <div class="title">
-      <a href="/all-products/{{brandInfo.categories}}/{{brandInfoType}}" class="main-title"><b>SẢN PHẨM</b></a>
+      <a href="/all-products/brand/{{brandInfo.name}}" class="main-title"><b>SẢN PHẨM</b></a>
     </div>
 
     <div class="products">
