--- a/src/public/css/user/fixedComponents.css
+++ b/src/public/css/user/fixedComponents.css
@@ -89,7 +89,6 @@
     padding-inline-start: 0px;
     padding: 10px;
     li {
-      background-color: #FFDFDF;
       border-radius: 10px;
       padding: 10px;
       list-style: none;
@@ -99,24 +98,15 @@
       word-wrap: break-word;
       display: block;
       clear: both;
+      float: left;
     }
     .right-content {
       float: right;
+      background-color: #FFDFDF;
     }
     .left-content {
-      display: flex;
-      align-items: start;
-      justify-content: start;
-      gap: 5px;
-      img {
-        margin-top: 5px;
-        border-radius: 50%;
-        width: 30px;
-        aspect-ratio: 1/1;
-      }
-      li {
-        background-color: #f0f0f0;
-      }
+      float: left;
+      background-color: #f0f0f0
     }
   }
   .chat-content::-webkit-scrollbar-track {
