--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -9,7 +9,7 @@
     </form>
 </div>
 
-<script defer>
+<script>
     var orderInfo       = `{{orderInfo}}`
     var orderCreatedAt  = `{{formatDate orderInfo.createdAt}}`
     var customerName    = `{{orderInfo.customerInfo.name}}`
