--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -16,7 +16,7 @@
 
         <div class="form-group">
           <p class="wrong-info"></p> 
-          <p class="forgot-password">Quên mật khẩu ?</p> 
+          <a href="/authentication/reset-password" class="forgot-password">Quên mật khẩu ?</a>
         </div>
 
         <div class="form-action">
