--- a/src/public/css/empty/signIn.css
+++ b/src/public/css/empty/signIn.css
@@ -33,6 +33,14 @@
         align-items: center;
         justify-content: center;
         gap: 10px;
+        a {
+          color: black;
+          text-decoration: none;
+          font-style: italic;
+        }
+        a:hover {
+          text-decoration: underline;
+        }
         input {
           width: 80%;
           height: 40px;
