--- a/src/resource/views/admin/signIn.hbs
+++ b/src/resource/views/admin/signIn.hbs
@@ -15,7 +15,7 @@
 
         <div class="form-group">
           <p class="wrong-info"></p> 
-          <p class="forgot-password">Quên mật khẩu ?</p> 
+          <a href="/emp/authentication/reset-password" class="forgot-password">Quên mật khẩu ?</a>
         </div>
 
         <div class="form-action">
