--- a/src/resource/views/layouts/users.hbs
+++ b/src/resource/views/layouts/users.hbs
@@ -17,7 +17,10 @@
   <script src="https://cdn.socket.io/4.8.1/socket.io.min.js"></script>
   <script src="/js/layouts/users.js"></script>
   <script src="/js/importLinkCss.js"></script>
-  <script src="/js/loadFile.js"></script>
+  <script src="/js/checkInput.js"></script>
+  <script src="/js/pushNotification.js"></script>
+  <script src="/js/sortAndFilter.js"></script>
+  <script src="/js/importLinkCss.js"></script>
   <title>{{title}}</title>
 </head>
 <body>
