--- a/src/resource/views/partials/userHeader.hbs
+++ b/src/resource/views/partials/userHeader.hbs
@@ -19,7 +19,7 @@
     <ul>
       <li>
         <span>
-          <a href="/all-products/skincare">Skincare</a>
+          <a href="/all-products/categories/skincare">Skincare</a>
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
         </span>
         <ul>
@@ -38,7 +38,7 @@
       </li>
       <li>
         <span>
-          <a href="/all-products/makeup">Makeup</a>
+          <a href="/all-products/categories/makeup">Makeup</a>
           <i class="fi fi-rr-angle-small-right" style="padding-top: 5px;"></i>
         </span>
         <ul>
@@ -54,7 +54,7 @@
   </div>
 
   <div class="header-title"><a href="/introduce">GIỚI THIỆU</a></div>
-  <div class="header-title"><a href="/all-products/new-arrival">HÀNG MỚI VỀ</a></div>
+  <div class="header-title"><a href="/all-products/status/new-arrival">HÀNG MỚI VỀ</a></div>
   <div class="header-title"><a href="/all-orders/checking">ĐƠN HÀNG</a></div>
   <div class="header-title" data-tippy-content="Tìm kiếm sản phẩm"><i class="fi fi-br-search" ></i></div>
 </div>
