--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -10,19 +10,19 @@
   <div class="sort">
     <label>Sắp xếp theo:</label>
     <select id="price" class="filter-btn">
-      <option value="">Giá</option>
+      <option value="0">Giá</option>
       <option value="1">Giá tăng dần</option>
       <option value="-1">Giá giảm dần</option>
     </select>
 
     <select id="rate" class="filter-btn">
-      <option value="">Đánh giá</option>
+      <option value="0">Đánh giá</option>
       <option value="1">Đánh giá tăng dần</option>
       <option value="-1">Đánh giá giảm dần</option>
     </select>
 
     <select id="saleNumber" class="filter-btn">
-      <option value="">Lượng bán</option>
+      <option value="0">Lượng bán</option>
       <option value="1">Lượng bán tăng dần</option>
       <option value="-1">Lượng bán giảm dần</option>
     </select>
@@ -52,7 +52,7 @@
   </div>
 
   <div class="products">
-    {{#each products}}
+    {{#each holderProducts}}
       {{> product}}
     {{/each}}
   </div>
@@ -63,9 +63,7 @@
 <script>
   var minPrice      = `{{minPrice.0.price}}`
   var maxPrice      = `{{maxPrice.0.price}}`
-  var getSlug       = `{{type}}`
-  var currentPage   = `{{currentPage}}`
-  var productLength = `{{productLength}}`
-  loadFile('/js/user/allProducts.js')
+  importLinkCss('/css/user/allProducts.css')
 </script>
+<script src="/js/user/allProducts.js"></script>
 <script src="/js/user/product.js"></script>
