--- a/src/resource/views/users/allOrders.hbs
+++ b/src/resource/views/users/allOrders.hbs
@@ -93,5 +93,6 @@
   var successful = `{{successful}}`
   var newOrderId = `{{newOrderId}}`
   var userId     = `{{userId}}`
-  loadFile('/js/user/allOrders.js')
+  importLinkCss('/css/user/allOrders.css')
 </script>
+<script src="/js/user/allOrders.js"></script>
