--- a/src/resource/views/users/detailBrand.hbs
+++ b/src/resource/views/users/detailBrand.hbs
@@ -39,5 +39,6 @@
 
 <script>
   brandDetails = `{{brandInfo.details}}`
-  loadFile('/js/user/detailBrand.js')
+  importLinkCss('/css/user/detailBrand.css')
 </script>
+<script src="/js/user/detailBrand.js"></script>
