--- a/src/resource/views/users/detailOrder.hbs
+++ b/src/resource/views/users/detailOrder.hbs
@@ -60,5 +60,6 @@
 </div>
 
 <script>
-  loadFile('/js/user/detailOrder.js')
+  importLinkCss('/css/user/detailOrder.css')
 </script>
+<script src="/js/user/detailOrder.js"></script>
