--- a/src/resource/views/users/detailRateOrder.hbs
+++ b/src/resource/views/users/detailRateOrder.hbs
@@ -83,5 +83,6 @@
 <script>
   const isRated = `{{orderInfo.isRated}}`
   const successful = `{{successful}}`
-  loadFile('/js/user/detailRateOrder.js')
+  importLinkCss('/css/user/detailRateOrder.css')
 </script>
+<script src="/js/user/detailRateOrder.js"></script>
