--- a/src/resource/views/users/introduce.hbs
+++ b/src/resource/views/users/introduce.hbs
@@ -34,5 +34,6 @@
 </div>
 
 <script>
-  loadFile('/js/user/introduce.js')
+  importLinkCss('/css/user/introduce.css')
 </script>
+<script src="/js/user/introduce.js"></script>
