--- a/src/resource/views/users/ordersChecking.hbs
+++ b/src/resource/views/users/ordersChecking.hbs
@@ -15,5 +15,6 @@
     var customerName    = `{{orderInfo.customerInfo.name}}`
     var orderStatus     = `{{orderInfo.status}}`
     var orderId         = `{{orderInfo._id}}`
-  loadFile('/js/user/ordersChecking.js')
+    importLinkCss('/css/user/ordersChecking.css')
 </script>
+<script src="/js/user/ordersChecking.js"></script>
