--- a/src/resource/views/users/profileFeedback.hbs
+++ b/src/resource/views/users/profileFeedback.hbs
@@ -20,5 +20,6 @@
 </div>   
 
 <script>
-  loadFile('/js/user/profileFeedback.js')
+  importLinkCss('/css/user/profile.css')
 </script>
+<script src="/js/user/profileFeedback.js"></script>
