--- a/src/resource/views/users/profileInfo.hbs
+++ b/src/resource/views/users/profileInfo.hbs
@@ -64,5 +64,6 @@
 <script>
   var gender = `{{userInfo.gender}}`
   var successful = `{{successful}}`
-  loadFile('/js/user/profileInfo.js')
+  importLinkCss('/css/user/profile.css')
 </script>
+<script src="/js/user/profileInfo.js"></script>
