--- a/src/resource/views/users/profileRateOrder.hbs
+++ b/src/resource/views/users/profileRateOrder.hbs
@@ -29,5 +29,6 @@
 </div>   
 
 <script>
-  loadFile('/js/user/profileRateOrder.js')
+  importLinkCss('/css/user/profile.css')
 </script>
+<script src="/js/user/profileRateOrder.js"></script>
