--- a/src/resource/views/users/resetPassword.hbs
+++ b/src/resource/views/users/resetPassword.hbs
@@ -13,5 +13,6 @@
 
 <script>
   var error = `{{error}}`
-  loadFile('/js/user/resetPassword.js')
+  importLinkCss('/css/user/resetPassword.css')
 </script>
+<script src="js/user/resetPassword.js"></script>
