--- a/src/resource/views/users/searchInfo.hbs
+++ b/src/resource/views/users/searchInfo.hbs
@@ -15,6 +15,6 @@
 <script>
   var currentPage   = `{{currentPage}}`
   var productLength = `{{productLength}}`
-  loadFile('/js/user/searchInfo.js')
+  importLinkCss('/css/user/allProducts.css')
 </script>
-<script src="/js/user/product.js"></script>
+<script src="/js/user/searchInfo.js"></script>
