--- a/src/resource/views/users/signIn.hbs
+++ b/src/resource/views/users/signIn.hbs
@@ -37,5 +37,6 @@
 <script>
   var error = `{{error}}`
   var successful = `{{successful}}`
-  loadFile('/js/user/signIn.js')
+  importLinkCss('/css/empty/signIn.css')
 </script>
+<script src="/js/user/signIn.js"></script>
