--- a/src/resource/views/users/signUp.hbs
+++ b/src/resource/views/users/signUp.hbs
@@ -43,5 +43,6 @@
 
 <script>
   var error = `{{error}}`
-  loadFile('/js/user/signUp.js')
+  importLinkCss('/css/empty/signIn.css')
 </script>
+<script src="/js/user/signUp.js"></script>
