--- a/src/resource/views/partials/product.hbs
+++ b/src/resource/views/partials/product.hbs
@@ -1,7 +1,8 @@
 <a href="/all-products/product/{{this._id}}">
-  <div class="product loading" data-tippy-content="{{this.name}}">
+  <div class="product" data-tippy-content="{{this.name}}">
+    <div class="loading"></div>
     <img loading="lazy">
-    <p id="old-price"><del></del></p>
+    <del><p id="old-price"></p></del>
     <p id="price"></p>
     <p id="name"></p>
     <p id="rate">
