--- a/src/resource/views/users/allProducts.hbs
+++ b/src/resource/views/users/allProducts.hbs
@@ -38,13 +38,13 @@
         <span class="thumb" id="thumbMin" style="left: 0%;"></span>
         <span class="thumb" id="thumbMax" style="left: 100%;"></span>
       </div>
-      <input id="rangeMin" type="range" max="{{maxPrice.0.price}}" min="{{minPrice.0.price}}" step="5" value="{{minPrice.0.price}}">
-      <input id="rangeMax" type="range" max="{{maxPrice.0.price}}" min="{{minPrice.0.price}}" step="5" value="{{maxPrice.0.price}}">
+      <input id="rangeMin" type="range" max="1000000" min="10000" step="5" value="10000">
+      <input id="rangeMax" type="range" max="1000000" min="10000" step="5" value="1000000">
     </div>
     <div class="display">
-      <span id="min">{{formatNumber minPrice.0.price}}</span>
+      <span id="min">10.000 VND</span>
       <span id="m-m"></span>
-      <span id="max">{{formatNumber maxPrice.0.price}}</span>
+      <span id="max">1.000.000 VND</span>
     </div>
 
     <button id="submit-filter">Chọn</button>
@@ -61,9 +61,6 @@
 </div>
 
 <script>
-  var minPrice      = `{{minPrice.0.price}}`
-  var maxPrice      = `{{maxPrice.0.price}}`
   importLinkCss('/css/user/allProducts.css')
 </script>
 <script src="/js/user/allProducts.js"></script>
-<script src="/js/user/product.js"></script>
